# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.5)
AC_INIT([wview],[5.20.1],[mteel@users.sourceforge.net])
AC_CONFIG_SRCDIR([ftp/ftpUtils.c])
AM_INIT_AUTOMAKE([wview],[5.20.1])
AM_CONFIG_HEADER([config.h])


# Provide a switch for installing databases:
AC_ARG_ENABLE(install-dpkg,
[  --enable-install-dpkg          install debian package environment],
[case "${enableval}" in
  yes) install_dpkg=true ;;
  no)  install_dpkg=false ;;
  *) install_dpkg=false ;;
esac],[install_dpkg=false])
AM_CONDITIONAL(INSTALL_DPKG, test x$install_dpkg = xtrue)

# grab autoconf version of the host system (not the same as gcc name):
AC_CANONICAL_HOST

# Check for big endian host:
AC_C_BIGENDIAN()

# Check where to get timezone (GMT offset) from
AC_STRUCT_TIMEZONE

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LN_S

# Set a flag here if we are cross compiling (must be after AC_PROG_CC)
AM_CONDITIONAL(CROSSCOMPILE, test x$cross_compiling = xyes)

# Determine host system (autoconf version):
case $host_os in
  darwin*)
    os_darwin=yes
    os_linux=no
    os_freebsd=no
    ;;
  freebsd*)
    os_darwin=no
    os_linux=no
    os_freebsd=yes
    ;;
  *)
    os_darwin=no
    os_linux=yes
    os_freebsd=no
    ;;
esac

AM_CONDITIONAL([DARWIN], [test x$os_darwin = xyes])
AM_CONDITIONAL([LINUX], [test x$os_linux = xyes])
AM_CONDITIONAL([FREEBSD], [test x$os_freebsd = xyes])


# Checks for libraries.
AC_CHECK_LIB([c], [strncpy], [], [echo "libc is missing!";exit -1])
AC_CHECK_LIB([gd], [gdImageCreate], [], [echo "libgd is missing!";exit -1])
AC_CHECK_LIB([m], [exp], [], [echo "libm is missing!";exit -1])
AC_CHECK_LIB([png], [png_write_chunk], [], [echo "libpng is missing!";exit -1])
AC_CHECK_LIB([sqlite3], [sqlite3_open], [], [echo "libsqlite3 is missing!";exit -1])
AC_CHECK_LIB([pthread], [pthread_create], [], [echo "libpthread is missing!";exit -1])
AC_CHECK_LIB([rad], [radthreadLock], [], [echo "librad is missing or old version!";exit -1])
AC_CHECK_LIB([curl], [curl_easy_init], [], [echo "libcurl is missing!";exit -1])
AC_CHECK_LIB([z], [inflate], [], [echo "libz is missing!";exit -1])

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h sys/time.h termios.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics
AC_C_CONST
AC_TYPE_PID_T
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MKTIME
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_CHECK_FUNCS([localtime_r memset mkdir pow strrchr])


AC_CONFIG_FILES([Makefile \
                 stations/Makefile \
                 stations/Simulator/Makefile \
                 stations/Virtual/Makefile \
                 stations/VantagePro/Makefile \
                 stations/VantagePro/vpconfig/Makefile \
                 stations/WS-2300/Makefile \
                 stations/WMR918/Makefile \
                 stations/WMRUSB/Makefile \
                 stations/WXT510/Makefile \
                 stations/WXT510/wxt510config/Makefile \
                 stations/TWI/Makefile \
                 stations/WH1080/Makefile \
                 stations/TE923/Makefile \
                 htmlgenerator/Makefile \
                 alarms/Makefile \
                 cwop/Makefile \
                 http/Makefile \
                 ftp/Makefile \
                 ssh/Makefile \
                 procmon/Makefile \
                 wviewconfig/Makefile \
                 wviewmgmt/Makefile \
                 dbexport/Makefile \
                 examples/Makefile \
                 examples/Debian/Makefile \
                 examples/FedoraCore/Makefile \
                 examples/FreeBSD/Makefile \
                 examples/MacOSX/wview/Makefile \
                 examples/NSLU2/Makefile \
                 examples/SuSE/Makefile \
                 utilities/Makefile \
                 utilities/wlk2sqlite/Makefile \
                 utilities/sqlite2wlk/Makefile \
                 utilities/archive-be2le/Makefile \
                 utilities/archive-le2be/Makefile \
                 utilities/hilowcreate/Makefile])
AC_OUTPUT
